# operating_systems_laboratories_4

./: CMakeLists.txt  README.md
install/: operating_systems_laboratories_4.service  operating_systems_laboratories_4.timer
sources/common/: PidFile.cpp  PidFile.hpp  globals.hpp
sources/leaker/: main.cpp
sources/mapper/: main.cpp
sources/monitor/: main.cpp
sources/plotter/: main.py
